--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>ToDo App</title>
 </head>
 <body>
+
+  <!---------------- start .CONTAINER---------------->
   <div class="container">
+
     <header>
       <h1>To Do</h1>
       <div class="input-wrapper">
@@ -16,30 +19,28 @@
         <button class="btn btn-todo-add">add</button>
       </div>
     </header>
+
     <main>
       <p class="status">no tasks to display</p>
-      <ul>
-        <li>
+      <ul class="todo-ul">
+        <!-- below: mockup of todo list item -->
+        <!-- <li task="0">
           <p class="task-text">task 1</p>
           <div class="buttons">
             <button class="btn btn-todo-up">&uarr;</button>
             <button class="btn btn-todo-down">&darr;</button>
             <button class="btn btn-todo-remove">X</button>
           </div>
-        </li>
-        <li>
-          <p class="task-text">task 2</p>
-          <div class="buttons">
-            <button class="btn btn-todo-up">up</button>
-            <button class="btn btn-todo-down">down</button>
-            <button class="btn btn-todo-remove">remove</button>
-          </div>
-        </li>
+        </li> -->
       </ul>
     </main>
-  </div>
 
-  <script src="script.js"></script>
+  </div>
+  <!---------------- end .CONTAINER---------------->
+
+  <script src="js/data.js"></script>
+  <script src="js/dom.js"></script>
+  <script src="js/app.js"></script>
   
 </body>
 </html>
