--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <header>
       <h1>To Do</h1>
+      <h2>make your own to-do list</h2>
       <div class="input-wrapper">
         <input class="todo-input" type="text" placeholder="enter a task">
         <button class="btn btn-todo-add">add</button>
