modify data structure; add sample todo list in data/sample.js and ammend all other files accordingly; minor style improvements

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   </div>
   <!---------------- end .CONTAINER---------------->
 
+  <script src="data/sample.js"></script>
   <script src="js/data.js"></script>
   <script src="js/dom.js"></script>
   <script src="js/app.js"></script>
-  
 </body>
 </html>
